<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/min_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer_icon"
            android:tint="@color/cool_pink"
            android:layout_margin="8dp"

            tools:ignore="UseAppTint"
            android:contentDescription="@string/min_15">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_15"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="8dp">

        </TextView>




    </LinearLayout>


    <LinearLayout
        android:id="@+id/min_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer_icon"
            android:tint="@color/cool_pink"
            android:layout_margin="8dp"

            tools:ignore="UseAppTint"
            android:contentDescription="@string/min_30">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_30"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="8dp">

        </TextView>




    </LinearLayout>


    <LinearLayout
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer_icon"
            android:tint="@color/cool_pink"
            android:layout_margin="8dp"

            tools:ignore="UseAppTint"
            android:contentDescription="@string/min_60">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_60"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:padding="8dp">

        </TextView>


    </LinearLayout>


</LinearLayout>