<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetails">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?attr/themeColor"

        android:layout_marginTop="2dp"

        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/backBtnPD"
            android:src="@drawable/back_icon"
            android:contentDescription="@string/back_button"
            android:backgroundTint="@android:color/transparent"
            android:tint="@color/white"
            tools:ignore="UseAppTint"
            android:padding="5dp">

        </ImageButton>

        <TextView
            android:id="@+id/playlistNamePD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/playlist_button"
            android:contentDescription="@string/playlist_button"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:singleLine="true"
            >

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:background="?attr/themeColor"
        android:layout_marginTop="10dp"

        >

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:id="@+id/playlistImgPD"
            android:src="@drawable/newww"
            >


        </com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/moreInfoPD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/playlist_name"
            android:gravity="center|start"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"


            >

        </TextView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playlistDetailsRV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDetails"
        android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
        android:scrollbars="vertical"
        android:paddingBottom="280dp"
        android:layout_marginTop="10dp"

        >

    </androidx.recyclerview.widget.RecyclerView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/shuffleBtnPD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        app:icon="@drawable/shuffle_icon"
        app:iconSize="35dp"
        app:iconTint="?attr/themeColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:strokeWidth="2dp"
        app:strokeColor="?attr/themeColor"
        android:visibility="invisible"
        >

    </com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton>


        <!--for buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            >

            <!--add button-->
            <Button
                android:id="@+id/addBtnPD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/add_song"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableLeft="@drawable/add_icon"
                android:text="@string/add_song"
                android:textColor="@color/black"
                android:textAllCaps="false"
                tools:ignore="RtlHardcoded">

            </Button>



            <!--   remove button-->
            <Button
                android:id="@+id/removeAllBtnPD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/remove_all"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:drawableLeft="@drawable/remove_icon"
                android:text="@string/remove_all"
                android:textColor="@color/black"
                android:textAllCaps="false"
                tools:ignore="RtlHardcoded">

            </Button>

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>