<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"


           >

           <!--for buttons-->
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               >

               <!--shuffle button-->
               <Button
                   android:id="@+id/shuffleBtn"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:contentDescription="@string/shuffle_button"
                   style="@style/Widget.AppCompat.Button.Borderless"
                   android:drawableTop="@drawable/shuffle_icon"
                   android:text="@string/shuffle_button"
                   android:textColor="@color/black"
                   android:textAllCaps="false"
                   >

               </Button>

               <!-- favourites button-->
               <Button
                   android:id="@+id/favouritesBtn"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:contentDescription="@string/favourites_button"
                   style="@style/Widget.AppCompat.Button.Borderless"
                   android:drawableTop="@drawable/favorite_icon"
                   android:text="@string/favourites_button"
                   android:textColor="@color/black"
                   android:textAllCaps="false"
                   >

               </Button>


               <!--   playlists button-->
               <Button
                   android:id="@+id/playlistsBtn"
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:contentDescription="@string/playlist_button"
                   style="@style/Widget.AppCompat.Button.Borderless"
                   android:drawableTop="@drawable/playlist_icon"
                   android:text="@string/playlist_button"
                   android:textColor="@color/black"
                   android:textAllCaps="false"
                   >

               </Button>

           </LinearLayout>

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/total_songs"
               android:id="@+id/totalSongs"
               android:textColor="@color/black"
               android:layout_margin="10dp"

               >

           </TextView>
           <androidx.recyclerview.widget.RecyclerView
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:scrollbars="vertical"
               android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
               android:id="@+id/musicRV">

           </androidx.recyclerview.widget.RecyclerView>



       </LinearLayout>

       <androidx.fragment.app.FragmentContainerView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/nowPlaying"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           android:name="com.example.musicplayer.NowPlaying"
           tools:layout="@layout/fragment_now_playing"
           >

       </androidx.fragment.app.FragmentContainerView>

   </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:id="@+id/navView"
        >


    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>

