<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:background="@color/black"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/set_theme"
        android:background="@color/white"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:gravity="center"
        >

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/white"

        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolPinkTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_pink"

            >

        </com.google.android.material.imageview.ShapeableImageView>
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolBlueTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_blue"

            >

        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolPurpleTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/purple_500"

            >

        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolGreenTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_green"

            >

        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolBlackTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/black"

            >

        </com.google.android.material.imageview.ShapeableImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="2dp"
        >
        <TextView

            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/sort_by"
            android:background="@color/white"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:gravity="center|start"
            tools:ignore="RtlSymmetry">

        </TextView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sortBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/sort_icon"
            android:tint="@color/cool_pink"
            android:padding="5dp"
            >

        </com.google.android.material.imageview.ShapeableImageView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/version_name"
        android:background="@color/white"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="16dp"
        android:id="@+id/versionName"
       >

    </TextView>

</LinearLayout>